--- a/src/OrchardCore.Modules/OrchardCore.Tags/wwwroot/Styles/tags.css
+++ b/src/OrchardCore.Modules/OrchardCore.Tags/wwwroot/Styles/tags.css
@@ -3,10 +3,8 @@
 ** Any changes made directly to this file will be overwritten next time its asset group is processed by Gulp.
 */
 
-#menu {
-  list-style: none;
-  padding-left: 0; }
+.tags-default .multiselect--active {
+  z-index: 1000; }
 
-#menu li {
-  list-style: none;
-  cursor: move; }
+[v-cloak] {
+  display: none; }
